# rpc_workspace

./: .gitignore  CMakeLists.txt  Makefile  justfile  mainpage.dox  manifest.xml  package.xml  zimmer.pgm
.devcontainer/: Dockerfile  devcontainer.json  zshrc
data/: rpc_tags.tex
data/tag36h11/: rpc_tags.tex
launch/: game_client.launch
msg/: Alive.msg  GameState.msg  Score.msg
scripts/: game_client.py
src/Gruppe1/: package.xml  setup.cfg  setup.py
src/Gruppe1/Gruppe1/: my_node.py
src/tams_lasertag_client/: CMakeLists.txt  package.xml
src/tams_lasertag_client/config/: apriltag.yaml  game_client.yaml
src/tams_lasertag_client/launch/: apriltag.launch.yaml  game_client.launch.yaml
src/tams_lasertag_client/msg/: Score.msg  Scoreboard.msg
src/tams_lasertag_client/scripts/: demo.py
src/tams_lasertag_client/src/: game_client_node.cpp
src/tams_lasertag_client/srv/: SubmitHit.srv
srv/: ClientScore.srv  PlayerScore.srv
